Fix minor typo in hw1

--- a/homeworks/latex/hw1.tex
+++ b/homeworks/latex/hw1.tex
@@ -137,7 +137,7 @@ Abhishek Jain}{Homework 1}{Deadline: September 14; 2022, 1:30 PM}
     \item (15 Points) Let $\mathcal{E}_1 = (\KeyGen_1, \Enc_1, \Dec_1)$ and $\mathcal{E}_2 = (\KeyGen_2, \Enc_2, \Dec_2)$ be two encryption schemes such that only one of them satisfies one-time perfect security, \textbf{but you don't know which one}.
     Using both $\mathcal{E}_1$ and $\mathcal{E}_2$ (but no other encryption scheme), construct an encryption scheme with one-time perfect security and prove its security. 
 
-    \item (extra credit, 15 Points) Prove that if an encryption scheme has $|\mathcal{K}| < |\mathcal{M}$ (i.e. there are fewer possible \textit{keys} than there are possible \textit{messages}), then it \textbf{cannot} satisfy \textbf{one-time perfect security}.
+    \item (extra credit, 15 Points) Prove that if an encryption scheme has $|\mathcal{K}| < |\mathcal{M}|$ (i.e. there are fewer possible \textit{keys} than there are possible \textit{messages}), then it \textbf{cannot} satisfy \textbf{one-time perfect security}.
     Try to structure your proof as an explicit attack on the scheme, i.e. a distinguisher between the distributions $\mathcal{D}_1$ and $\mathcal{D}_2$.
 
     Hint: There is no restriction on the running time of the attacker. Exhaustive brute-force attacks are therefore valid.
