Fix typo in hw3 q1

--- a/homeworks/latex/hw3.tex
+++ b/homeworks/latex/hw3.tex
@@ -53,7 +53,7 @@ $$
 \Pr\Big[x\leftarrow\{0,1\}^n: \mathcal{A}(1^n,f(x))=h(x)\Big]\leq\frac{1}{4}+\nu(n).
 $$
 \end{mdframed}
-Let $f:\{0,1\}^{2n}\to\{0,1\}^{2n}$ be a OWF. Then we know that $g(x,r)=(f(x),r)$, where $|x|=|r|$ is also a OWF. Explain using a counterexample that $h(x,r)=\langle x[0:n],r\rangle\|\langle x[n:2n],r\rangle$, where $x[0:n]$ (and resp. $x[n:2n]$) denote the first $n$ bits (and resp. last $n$ bits) of $x$, is \textbf{NOT} a 2-bit hard core function for $f$.
+Let $f:\{0,1\}^{2n}\to\{0,1\}^{2n}$ be a OWF. Then we know that $g(x,r)=(f(x),r)$, where $|x|=|r|$ is also a OWF. Explain using a counterexample that $h(x,r)=\langle x[0:n],r\rangle\|\langle x[n:2n],r\rangle$, where $x[0:n]$ (and resp. $x[n:2n]$) denote the first $n$ bits (and resp. last $n$ bits) of $x$, is \textbf{NOT} a 2-bit hard core function for $g$.
 \end{enumerate}
 
 \section{Pseudorandom Functions}
