--- a/homeworks/latex/hw4.tex
+++ b/homeworks/latex/hw4.tex
@@ -55,6 +55,12 @@ Abhishek Jain}{Homework 4}{Deadline: November 2; 2022, 1:30 PM EST}
 
 \begin{enumerate}
 
+\item In class we learned that single-message security does \textbf{not} imply multi-message security for secret-key encryption. Here we will prove that claim. 
+
+Let $(\Gen, \Enc, \Dec)$ be a multi-message IND-CPA secure \textbf{secret-key} encryption scheme. Construct a secret-key encryption scheme $(\Gen', \Enc', \Dec')$ and prove that it is single-message IND-CPA secure but \textbf{not} multi-message IND-CPA secure.
+
+
+
 \item
 Let $\G$ be a cyclic group with order $q$ and generator $g$. Consider the following $\Gen$ and $\Enc$ functions for a public-key encryption scheme with single bit messages:
 \begin{itemize}
